* Fri May 30 2014 Ding-Yi Chen <dchen at redhat.com> - 2.0.0
[TODO] Fix ChangeLog handling
[TODO] Check ibus-chewing compatiblity
- Fixed Bug 1093336 - date(1): -u is much portable than --utc
- Enhancement:
  + No need to use MAKE_INSTALL_* for rpm files section.
    INSTALL at any place works.
  + find_lang and files -f .lang are added
automatically when
    translations exists.
  + New modules:
    - CmakeFedoraScript: Scripts to be invoked in command line.
    - ManageRpmScript: RPM Scripts to be invoked in command line.
  + New cache variables:
    - CMAKE_FEDORA_MODULE_DIR: cmake-fedora modules dir.
  + ManageFile: New function: MANAGE_CMAKE_FEDORA_CONF
  + ManageFile: New function: MANAGE_FILE_CACHE
  + ManageFile: New function: MANAGE_FILE_EXPIRY
  + ManageMessage: New function: M_OUT
  + ManageVariable: New macro: CMAKE_FEDORA_CONF_GET_ALL_VARIABLES
- Fix EPEL 7 support.
- Removed:
  + cmake-fedora.conf.in is no longer need.  + scripts/cmake-fedora-functions is no longer needed.
  + Variables:
    - PRJ_RPM_SPEC_FILE

* Fri Feb 28 2014 Ding-Yi Chen <dchen at redhat.com> - 1.3.0
- Fixed Bug 1002279 - Project configuration bugs when using cmake-fedora-newprj
- Enhanced:
  + Support EPEL7
  + New targets: pack_src_no_force.
- Fixed:
  + cmake-fedora-newprj is fixed.

* Sat Feb 01 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.7
- Changed:
  + cmake-fedora.conf.in will also be searched if cmake-fedora.conf does not exist.
  + Target test is built before pack_src.

* Fri Jan 31 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.6
- Resolves Bug 1058631 - ManagePRM generate Broken %defattr
- Enhancement:
  + ManageTarget: ADD_CUSTOM_TARGET_COMMAND: NO_FORCE: new option.
  + Projects that includes cmake-fedora as submodule are no longer requires cmake-fedora.conf
- Changed:
  + ManageTranslation: Fix po build
  + ManageRPM: Fix defattr
  + ManageReleaseFedora: 
    - Helper scripts in CMAKE_SOURCE_DIR/cmake-fedora can also be located.