@@ -61,7 +61,7 @@ MACRO(EXTRACT_CURRENT_FROM_RELEASE strVar release)
 ENDMACRO()
 
 MACRO(EXTRACT_CURRENT_FROM_RELEASE strVar release)
-    IF(NOT release)
+    IF("${release}" STREQUAL "")
 	MANAGE_CHANGELOG_SCRIPT_PRINT_USAGE()
 	M_MSG(${M_FATAL} "Requires \"-Drelease=RELEASE-NOTES.txt\"")
     ENDIF()
@@ -86,16 +86,16 @@ MACRO(EXTRACT_CURRENT_FROM_RELEASE strVar release)
 ENDMACRO()
 
 MACRO(EXTRACT_PREV_FROM_CHANGELOG strVar ver changeLogFile)
-    IF(NOT ver)
+    IF("${ver}" STREQUAL "")
 	MANAGE_CHANGELOG_SCRIPT_PRINT_USAGE()
 	M_MSG(${M_FATAL} "Requires \"-Dver=ver\"")
-    ENDIF(NOT ver)
-    IF(NOT changelog)
-	MANAGE_CHANGELOG_SCRIPT_PRINT_USAGE()
-	M_MSG(${M_FATAL} "Requires \"-Drelease=RELEASE-NOTES.txt\"")
     ENDIF()
-    IF(NOT EXISTS "${changelog}")
-	M_MSG(${M_FATAL} "File not found:${changelog}")
+    IF("${changeLogFile}" STREQUAL "")
+	MANAGE_CHANGELOG_SCRIPT_PRINT_USAGE()
+	M_MSG(${M_FATAL} "Requires \"-Dchangelog=ChangeLog\"")
+    ENDIF()
+    IF(NOT EXISTS "${changeLogFile}")
+	M_MSG(${M_FATAL} "File not found:${changeLogFile}")
     ENDIF()
 
     SET(_this "")
@@ -142,8 +142,10 @@ ENDMACRO()
 
 MACRO(CHANGELOG_UPDATE prj_info release changelog)
     LOAD_PRJ_INFO()
+    MESSAGE("1PRJ_VER=${PRJ_VER}")
+
     EXTRACT_CURRENT_FROM_RELEASE(currentStr "${release}")
-    EXTRACT_PREV_FROM_CHANGELOG(prevStr ${PRJ_VER} "${changelog}")
+    EXTRACT_PREV_FROM_CHANGELOG(prevStr "${PRJ_VER}" "${changelog}")
     FILE(WRITE "${changelog}" "* ${TODAY_CHANGELOG} ${MAINTAINER} - ${PRJ_VER}\n")
     FILE(APPEND "${changelog}" "${currentStr}\n\n")
     FILE(APPEND "${changelog}" "${prevStr}")
